--- a/docs/css/lista-mudanca.css
+++ b/docs/css/lista-mudanca.css
@@ -13,14 +13,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
 }
 
 #lista-mudanca {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 90%;
 }
 
 #titulo {
@@ -33,10 +33,6 @@
     display: flex;
     text-align: center !important;
     flex-direction: column;
-}
-
-.card {
-    word-wrap: break-word;
 }
 
 .data {
@@ -54,12 +50,18 @@
     display: none !important;
 }
 
-#dados-lista > div {
+#dados-lista>div {
     display: flex;
     border: 1px solid #000;
     border-radius: 5px;
     margin-bottom: 10px;
-    
+
+}
+
+#img-perfil {
+    width: 24px;
+    height: 24px;
+    display: flex;
 }
 
 #valor {
@@ -69,13 +71,14 @@
     background-color: #0b142f;
     color: WHITE;
     height: 100%;
+    width: 90px;
     padding: 0 10px 10px 10px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     align-items: center;
 }
 
-#valor > p {
+#valor>p {
     font-size: 10px;
     font-weight: 200;
     padding: 0;
@@ -84,25 +87,26 @@
     padding-top: 10px;
 }
 
-.btn-aceite {
+.btn-bot {
     color: white;
-    background-color:#e4321e;
+    background-color: #e4321e;
     width: 70%;
     border-radius: 15px;
-    font-weight: 300; 
+    font-weight: 300;
     text-align: center;
     margin: 0 0 5px 0;
     padding: 15px;
     cursor: pointer;
 }
 
-.btn-aceite:hover {
+.btn-bot:hover {
     background-color: #e4321e;
     transition: 0.4ms;
     font-weight: 900;
 }
 
-.origem, .destino {
+.origem,
+.destino {
     display: flex;
     font-size: 15px !important;
     width: 100% !important;
@@ -113,4 +117,99 @@
 
 #origem {
     margin-top: 10px;
+}
+
+.btn-aceite {
+    display: none;
+}
+
+#img-perfil {
+    display: none;
+}
+
+@media (min-width: 431px) {
+
+
+    #lista-mudanca {
+        width: 85%;
+    }
+
+    #container-lista {
+        display: flex;
+        justify-content: left;
+        width: 100%;
+    }
+
+    .dados-cont {
+        width: 25%;
+    }
+
+    .btn-bot {
+        width: 25%;
+    }
+
+    .dados-mudanca, .origem, .destino, .usuario {
+        display: flex !important;
+        text-align: left;
+        justify-content: flex-start;
+        padding: 5px 5px 5px 10px;
+    }
+
+    #origem,
+    .origem,
+    .destino,
+    #destino, 
+    .usuario,
+    #titulo,
+    .descricao {
+        font-size: 23px !important;
+    }
+
+    .descricao {
+        align-self: center;
+        padding-bottom: 10px;
+        
+    }
+
+    .usuario {
+        padding-left: 30px;
+    }
+
+    .dados-mudanca p {
+        display: flex;
+        align-items: center;
+        padding-bottom: 15px;
+    }
+
+    #btn-visualizar {
+        display: none;
+    }
+
+    .btn-aceite {
+        display: flex !important;
+        justify-content: center;
+
+    }
+
+    #container-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #container-list button {
+        align-self: center;
+        flex-grow: 0;
+    }
+
+    #img-perfil {
+        display: flex;
+        width: 24px;
+        height: 24px;
+        position: relative;
+        top: 32px;
+        left: 3px;
+    }
+    #valor {
+        width: 70%;
+    }
 }
