--- a/docs/css/perfiltest.css
+++ b/docs/css/perfiltest.css
@@ -211,6 +211,7 @@
 
 .sections-perfil img {
     display: none;
+    cursor: pointer;
 }
 
 .sections-perfil span {
@@ -227,6 +228,7 @@
     background-color: var(--color-background-perfil3);
     border-bottom: 3px solid #e4321e;
     padding-bottom: 6px;
+    cursor: pointer;
 }
 
 #sections-perfil-informacoes span::after,
@@ -516,6 +518,7 @@
         width: 100%;
         height: auto;
         text-align: center;
+        gap: 15%;
     }
 
     .sections-perfil-desktop {
@@ -536,6 +539,14 @@
         height: 100%;
         margin-top: -25px;
         margin-right: -15px;
+    }
+
+    .active-perfil {
+        color: none;
+        background-color: var(--color-background-perfil3);
+        border-bottom: none;
+        padding-bottom: none;
+        cursor: pointer;
     }
 
     #sobre-perfil {
@@ -590,12 +601,12 @@
         width: auto;
         height: auto;
         font-weight: bold;
-        padding: 0 0 0 15px;
+        padding: 2px 0 2px 15px;
         background-color: rgb(219, 218, 218);
     }
 
     .info-dados-historico a {
-        padding: 0 0 0 15px;
+        padding: 2px 0 2px 15px;
         background-color: rgb(245, 243, 243);
     }
 
@@ -611,12 +622,12 @@
         width: auto;
         height: auto;
         font-weight: bold;
-        padding: 0 0 0 15px;
+        padding: 2px 0 2px 15px;
         background-color: rgb(219, 218, 218);
     }
 
     .info-dados-veiculo a {
-        padding: 0 0 0 15px;
+        padding: 2px 0 2px 15px;
         background-color: rgb(245, 243, 243);
     }
 
@@ -637,7 +648,7 @@
         width: auto;
         height: auto;
         font-weight: bold;
-        padding: 0 0 0 15px;
+        padding: 2px 0 2px 15px;
         background-color: rgb(219, 218, 218);
         width: 100%;
         margin: 0;
@@ -646,6 +657,7 @@
     .dados-perfil span {
         padding-left: 15px;
         width: 100%;
+        padding: 2px 0 2px 15px;
     }
 
     #dados-veiculo-principal {
