--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -2,7 +2,7 @@
     font-family: "Montserrat";
     src: url(../assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
- 
+
 * {
     font-family: "Montserrat", sans-serif;
 }
@@ -10,51 +10,85 @@
 .banner {
     height: 100vh;
     width: 100%;
-    border-top: 1px solid;
 }
 
-.menu-list {
-    position: relative;
+
+
+/* --- BANNER --- */
+
+.banner-inicial {
+    width: 100vw;
+    height: 50vh;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.background-image {
-    background: url(../assets/images/Sobre-3.jpg);
-    background-size: cover;
-    width: 95%;
+.banner-image {
+    width: 100%;
+    height: 100%;
+    background-image: url(../assets/images/bg-home-md.jpg);
     background-repeat: no-repeat;
-    background-position-y: 70%;
-    background-position-x: 50%;
-    border: 1px solid;
+    background-size: 100%;
+    background-position: center;
+    filter: grayscale(10%) blur(8px);
 }
 
-.texto {
-    text-align: center;
+.texto-inicial {
+    width: 50vw;
+    height: 15vw;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 4vw;
 }
 
-#quote-center {
-    text-align: center;
+
+
+/* --- SOBRE NÓS --- */
+
+.sobre-nos {
+    width: 100vw;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#background-bottom {
-    border: 1px solid;
-    background: url(../assets/images/Sobre-1.jpg);
-    width: 95%;
-    height: 600px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-x: 70%;
-    background-position-y: 50%;
+.img-nos {
+    width: 50%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@media (max-width:700px) {
-    .background-image {
-        display: none;
-    }
-
-    #background-bottom {
-        background: url(../assets/images/Sobre-2.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position-x: 70%;
-    }
+.texto-nos {
+    width: 50%;
+    height: auto;
+    padding: 6%;
+    text-align: justify;
 }
+
+
+
+/* --- NOSSA HISTÓRIA --- */
+
+.nossa-historia {
+    width: 100vw;
+    height: auto;
+    text-align: justify;
+    padding: 6%;
+}
+
+#moveasy-team-image {
+    width: 50%;
+    height: 60%;
+    filter: grayscale(10%);
+}
+
+
+/* --- INTEGRANTES --- */
