--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -18,7 +18,7 @@
 
 .banner-inicial {
     width: 100vw;
-    height: 50vh;
+    height: 48vh;
     background-color: #000;
     display: flex;
     align-items: center;
@@ -30,9 +30,9 @@
     height: 100%;
     background-image: url(../assets/images/bg-home-md.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 150%;
     background-position: center;
-    filter: grayscale(10%) blur(8px);
+    filter: grayscale(60%) blur(2px);
 }
 
 .texto-inicial {
@@ -58,12 +58,16 @@
     justify-content: center;
 }
 
-.img-nos {
+.img-nos-1 {
     width: 50%;
     height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.img-nos-2 {
+    display: none;
 }
 
 .texto-nos {
@@ -91,4 +95,62 @@
 }
 
 
+
 /* --- INTEGRANTES --- */
+
+
+
+/* --- VERSÃO MOBILE --- */
+
+@media (max-width: 1125px) {
+
+
+
+    /* --- BANNER --- */
+
+    .texto-inicial {
+        font-weight: bold;
+    }
+
+
+
+    /* --- SOBRE NÓS --- */
+
+    .sobre-nos {
+        width: 100vw;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .img-nos-1 {
+        display: none;
+    }
+
+    .img-nos-2 {
+        display: flex;
+        width: 100%;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+        filter: grayscale(20%);
+    }
+
+    .texto-nos {
+        width: 100%;
+        height: auto;
+        padding: 6%;
+        text-align: justify;
+    }
+
+
+
+    /* --- NOSSA HISTÓRIA --- */
+
+
+
+    /* --- INTEGRANTES --- */
+
+}
