--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -17,7 +17,7 @@
 /* --- BANNER --- */
 
 .banner-inicial {
-    width: 100vw;
+    width: 100%;
     height: 48vh;
     background-color: #000;
     display: flex;
@@ -36,8 +36,8 @@
 }
 
 .texto-inicial {
-    width: 50vw;
-    height: 15vw;
+    width: 50%;
+    height: 15vh;
     position: absolute;
     display: flex;
     align-items: center;
@@ -51,7 +51,7 @@
 /* --- SOBRE NÓS --- */
 
 .sobre-nos {
-    width: 100vw;
+    width: 100%;
     height: auto;
     display: flex;
     align-items: center;
@@ -79,10 +79,71 @@
 
 
 
+/* --- NOSSOS VALORES --- */
+
+.nossos-valores {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #0b142f;
+    color: #FFF;
+    text-align: justify;
+    padding: 6%;
+}
+
+.visao-missao-valores {
+    display: flex;
+}
+
+#titulo-todos-valores {
+    padding: 3% 0 2%;
+    text-align: center;
+    color: #e4321e;
+    font-weight: bold;
+}
+
+.visao-valores {
+    width: 50%;
+    height: auto;
+    padding: 2%;
+}
+
+.missao-valores {
+    width: 50%;
+    height: auto;
+    padding: 2%;
+}
+
+.todos-valores {
+    width: 100%;
+    height: auto;
+}
+
+.todos-valores-1 {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: auto;
+    padding: 2%;
+}
+
+.todos-valores-2 {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: auto;
+    padding: 2%;
+}
+
+
+
 /* --- NOSSA HISTÓRIA --- */
 
 .nossa-historia {
-    width: 100vw;
+    width: 100%;
     height: auto;
     text-align: justify;
     padding: 6%;
@@ -109,7 +170,10 @@
     /* --- BANNER --- */
 
     .texto-inicial {
-        font-weight: bold;
+        width: 100%;
+        height: auto;
+        font-weight: 500;
+        font-size: 25px;
     }
 
 
@@ -117,7 +181,7 @@
     /* --- SOBRE NÓS --- */
 
     .sobre-nos {
-        width: 100vw;
+        width: 100%;
         height: auto;
         display: flex;
         align-items: center;
@@ -136,6 +200,9 @@
         align-items: center;
         justify-content: center;
         filter: grayscale(20%);
+        box-shadow: 0px 20px 35px 5px rgba(0, 0, 0, 0.6);
+        -webkit-box-shadow: 0px 20px 35px 5px rgba(0, 0, 0, 0.6);
+        -moz-box-shadow: 0px 20px 35px 5px rgba(0, 0, 0, 0.6);
     }
 
     .texto-nos {
@@ -143,6 +210,56 @@
         height: auto;
         padding: 6%;
         text-align: justify;
+    }
+
+
+
+    /* --- NOSSOS VALORES --- */
+
+    .visao-missao-valores {
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #titulo-todos-valores {
+        padding: 3% 0 2% 2%;
+        color: #e4321e;
+        font-weight: bold;
+        text-align: start;
+    }
+
+    .visao-valores {
+        width: 100%;
+        height: auto;
+        padding: 2%;
+    }
+
+    .missao-valores {
+        width: 100%;
+        height: auto;
+        padding: 2%;
+    }
+
+    .todos-valores {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .todos-valores-1 {
+        width: 50%;
+        height: auto;
+        padding: 2%;
+    }
+
+    .todos-valores-2 {
+        width: 50%;
+        height: auto;
+        padding: 2%;
     }
 
 
