--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -48,38 +48,59 @@
 
 
 
-/* --- SOBRE NÓS --- */
+/* --- SOBRE INICIAL --- */
 
-.sobre-nos {
+.sobre-inicial {
     width: 100%;
     height: auto;
+    padding: 6% 6% 0 6%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
 }
 
-.img-nos-1 {
-    width: 50%;
+.boxes-sobre {
+    width: auto;
     height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 5%;
+    gap: 10%;
 }
 
-.img-nos-2 {
-    display: none;
-}
-
-.texto-nos {
-    width: 50%;
-    height: auto;
-    padding: 6%;
-    text-align: justify;
+.box-sobre {
+    width: 250px;
+    height: 250px;
+    border: 2px solid #e4321e;
+    border-radius: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 2%;
+    gap: 15px;
+    text-align: center;
 }
 
 
 
 /* --- NOSSOS VALORES --- */
+
+.img-valores {
+    width: auto;
+    height: 70%;
+    margin-bottom: -30px;
+}
+
+.img-valores img {
+    width: 100vw;
+    height: auto;
+    filter: grayscale(20%);
+    margin: 0;
+    box-shadow: 0px 20px 25px 0px rgba(0, 0, 0, 0.7);
+    -webkit-box-shadow: 0px 20px 25px 0px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 0px 20px 25px 0px rgba(0, 0, 0, 0.7);
+}
 
 .nossos-valores {
     width: 100%;
@@ -140,24 +161,153 @@
 
 
 
+/* --- NOSSO OBJETIVO --- */
+
+.nosso-objetivo {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-objetivo-1 {
+    width: 50%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.texto-objetivo {
+    width: 50%;
+    height: auto;
+    padding: 6%;
+    text-align: justify;
+}
+
+
+
 /* --- NOSSA HISTÓRIA --- */
+
+#hr-section,
+#hr-objetivo,
+#hr-historia {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-style: inset;
+    border-width: 1px;
+}
 
 .nossa-historia {
     width: 100%;
     height: auto;
+    display: flex;
     text-align: justify;
     padding: 6%;
 }
 
-#moveasy-team-image {
+.img-historia-1 {
     width: 50%;
-    height: 60%;
-    filter: grayscale(10%);
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    filter: grayscale(20%);
+}
+
+#moveasy-team-image {
+    width: 100%;
+    height: auto;
+}
+
+.texto-objetivo {
+    width: 50%;
+    height: auto;
+    padding: 6%;
+    text-align: justify;
 }
 
 
 
 /* --- INTEGRANTES --- */
+
+.nossos-integrantes {
+    width: 100%;
+    height: auto;
+    padding: 6% 6% 0 6%;
+    display: flex;
+    flex-direction: column;
+}
+
+.boxes-integrantes {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2%;
+}
+
+.box-integrantes {
+    width: 250px;
+    height: 354px;
+    background: #e4321e;
+    border-radius: 15px;
+    box-shadow: 1px 5px 60px 0px #100a886b;
+    margin: 0 2%;
+    padding-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.box-integrantes span {
+    font-weight: 600;
+    color: #ffffff;
+    text-align: center;
+    display: block;
+    padding-top: 10px;
+    font-size: large;
+}
+
+.box-integrantes .job {
+    font-weight: 400;
+    color: #ffffff;
+    display: block;
+    text-align: center;
+    padding-top: 3px;
+    font-size: 12px;
+}
+
+.box-integrantes .img {
+    width: 70px;
+    height: 70px;
+    background: #ffffff;
+    border-radius: 50%;
+    margin: auto;
+    margin-top: 25px;
+}
+
+.box-integrantes button {
+    padding: 8px 25px;
+    display: block;
+    margin: auto;
+    border-radius: 8px;
+    border: none;
+    margin-top: 30px;
+    background: #e4321e;
+    color: #ffffff;
+    font-weight: 600;
+}
+
+.box-integrantes button:hover {
+    background: #e4321e65;
+}
 
 
 
@@ -191,18 +341,6 @@
 
     .img-nos-1 {
         display: none;
-    }
-
-    .img-nos-2 {
-        display: flex;
-        width: 100%;
-        height: auto;
-        align-items: center;
-        justify-content: center;
-        filter: grayscale(20%);
-        box-shadow: 0px 20px 35px 5px rgba(0, 0, 0, 0.6);
-        -webkit-box-shadow: 0px 20px 35px 5px rgba(0, 0, 0, 0.6);
-        -moz-box-shadow: 0px 20px 35px 5px rgba(0, 0, 0, 0.6);
     }
 
     .texto-nos {
