--- a/docs/css/lista-mudanca.css
+++ b/docs/css/lista-mudanca.css
@@ -95,7 +95,7 @@
     display: none !important;
 }
 
-#dados-lista>div, #dados-pendente > div {
+#dados-lista>div {
     display: flex;
     border: 1px solid #000;
     border-radius: 5px;
@@ -172,6 +172,22 @@
     display: none;
 }
 
+.pendente {
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    text-align: center !important;
+    width: 90%;
+
+}
+
+#lista-mudanca-pendente {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 @media (min-width: 900px) {
 
 
@@ -242,12 +258,12 @@
 
     }
 
-    #container-list, #container-lista-pendente {
+    #container-list, #container-list-pendente {
         display: flex;
         flex-direction: column;
     }
 
-    #container-list button, #container-lista-pendente button {
+    #container-list button, #container-list-pendente button {
         align-self: center;
         flex-grow: 0;
     }
