--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -8,7 +8,7 @@
 }
 
 .banner {
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 
@@ -19,7 +19,7 @@
 .banner-inicial {
     width: 100%;
     height: 48vh;
-    background-color: #000;
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,7 +58,7 @@
     flex-direction: column;
 }
 
-.boxes-sobre {
+.cards-sobre {
     width: auto;
     height: auto;
     display: flex;
@@ -80,6 +80,69 @@
     padding: 0 2%;
     gap: 15px;
     text-align: center;
+    perspective: 1000px;
+}
+
+.card-front span {
+    font-size: 45px;
+}
+
+.card {
+    width: 250px;
+    height: 250px;
+    perspective: 1000px;
+}
+
+.card-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.999s;
+}
+
+.card:hover .card-inner {
+    transform: rotateY(180deg);
+    cursor: pointer;
+}
+
+.card-front,
+.card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-front {
+    background-color: #e4321e;
+    border: 2px solid #e4321e;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    border-radius: 5%;
+    justify-content: space-between;
+    font-size: large;
+    transform: rotateY(0deg);
+    padding: 35% 0;
+}
+
+.card-back {
+    background-color: #fff;
+    color: #000;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    border: 2px solid #e4321e;
+    border-radius: 10px;
+    justify-content: center;
+    font-size: large;
+    transform: rotateY(180deg);
+    padding: 5%;
 }
 
 
@@ -190,9 +253,7 @@
 
 /* --- NOSSA HISTÓRIA --- */
 
-#hr-section,
-#hr-objetivo,
-#hr-historia {
+#hr-section {
     display: block;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
@@ -207,7 +268,6 @@
     height: auto;
     display: flex;
     text-align: justify;
-    padding: 6%;
 }
 
 .img-historia-1 {
@@ -241,6 +301,8 @@
     padding: 6% 6% 0 6%;
     display: flex;
     flex-direction: column;
+    background-color: #0b142f;
+    color: #FFF;
 }
 
 .boxes-integrantes {
@@ -264,6 +326,17 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    border: 2px solid #FFF;
+}
+
+.img-integrantes {
+    width: 120px;
+    height: 120px;
+}
+
+.img-integrantes img {
+    border-radius: 50%;
+    border: 2px solid #FFF;
 }
 
 .box-integrantes span {
@@ -314,8 +387,6 @@
 /* --- VERSÃO MOBILE --- */
 
 @media (max-width: 1125px) {
-
-
 
     /* --- BANNER --- */
 
