--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -145,6 +145,10 @@
     padding: 5%;
 }
 
+.titulos-sobre {
+    font-size: 5vh;
+}
+
 
 
 /* --- NOSSOS VALORES --- */
@@ -204,6 +208,10 @@
 .todos-valores {
     width: 100%;
     height: auto;
+}
+
+.todos-valores-0 {
+    display: flex;
 }
 
 .todos-valores-1 {
@@ -399,7 +407,7 @@
 
 
 
-    /* --- SOBRE NÓS --- */
+    /* --- SOBRE INICIAL --- */
 
     .sobre-nos {
         width: 100%;
@@ -456,27 +464,147 @@
         width: 100%;
         height: auto;
         display: flex;
+        justify-content: center;
         flex-direction: column;
     }
 
+    .todos-valores-0 {
+        display: block;
+    }
+
     .todos-valores-1 {
-        width: 50%;
+        width: 100%;
         height: auto;
         padding: 2%;
     }
 
     .todos-valores-2 {
-        width: 50%;
+        width: 100%;
         height: auto;
         padding: 2%;
+    }
+
+
+
+    /* --- NOSSOS OBJETIVOS --- */
+
+    .nosso-objetivo {
+        display: block;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .img-objetivo-1 {
+        display: none;
+    }
+
+    .texto-objetivo {
+        width: 100%;
+        height: auto;
+        padding: 6%;
+        text-align: justify;
     }
 
 
 
     /* --- NOSSA HISTÓRIA --- */
 
+    .nossa-historia {
+        display: block;
+    }
+
+    .img-historia-1 {
+        display: none;
+    }
+
+    .img-historia-2 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #moveasy-team-image {
+        border-radius: 2%;
+    }
+
 
 
     /* --- INTEGRANTES --- */
-
+    
+    .boxes-integrantes {
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin: 2%;
+    }
+    
+    .box-integrantes {
+        width: 80%;
+        height: 15%;
+        background: #e4321e;
+        border-radius: 15px;
+        box-shadow: 1px 5px 60px 0px #100a886b;
+        margin: 0 2%;
+        padding-top: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #FFF;
+    }
+    
+    .img-integrantes {
+        width: 120px;
+        height: 120px;
+    }
+    
+    .img-integrantes img {
+        border-radius: 50%;
+        border: 2px solid #FFF;
+    }
+    
+    .box-integrantes span {
+        font-weight: 600;
+        color: #ffffff;
+        text-align: center;
+        display: block;
+        padding-top: 10px;
+        font-size: large;
+    }
+    
+    .box-integrantes .job {
+        font-weight: 400;
+        color: #ffffff;
+        display: block;
+        text-align: center;
+        padding-top: 3px;
+        font-size: 12px;
+    }
+    
+    .box-integrantes .img {
+        width: 70px;
+        height: 70px;
+        background: #ffffff;
+        border-radius: 50%;
+        margin: auto;
+        margin-top: 25px;
+    }
+    
+    .box-integrantes button {
+        padding: 8px 25px;
+        display: block;
+        margin: auto;
+        border-radius: 8px;
+        border: none;
+        margin-top: 30px;
+        background: #e4321e;
+        color: #ffffff;
+        font-weight: 600;
+    }
+    
+    .box-integrantes button:hover {
+        background: #e4321e65;
+    }
 }
