--- a/docs/css/sobre.css
+++ b/docs/css/sobre.css
@@ -558,6 +558,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding-bottom: 50px;
     }
 
     .boxes-integrantes {
@@ -589,7 +590,7 @@
         width: 90px;
         height: 90px;
         position: relative;
-        left: -10px;
+        left: 10px;
     }
 
     .img-integrantes img {
