--- a/docs/css/pagamento.css
+++ b/docs/css/pagamento.css
@@ -202,32 +202,20 @@ textarea:focus {
 /* --- MENU CARTÃO DE CREDITO ---*/
 
 .btn {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #E53420;
     color: white;
     text-decoration: none;
-
-    padding: 15px 15px;
+    font-weight: 700;
+    padding: 20px;
     border-radius: 5px;
-    position: relative;
-
-    &::after {
-        content: '';
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        transition: all .2s ease-in-out;
-        box-shadow: inset 0 3px 0 hsla(0, 0, 0, 0), 0 3px 3px hsla(0, 0, 0, .2);
-        border-radius: 5px;
-    }
-
-    &:hover::after {
-        background: hsla(0, 0, 0, 0.1);
-        box-shadow: inset 0 3px 0 hsla(0, 0, 0, 0.2);
-    }
+    margin-top: 50px;
+    width: 82%;
+    height: 6%;
+    text-transform: uppercase;
+    
 
 }
 
@@ -609,6 +597,50 @@ Credit Card
     #btn-submit {
         margin-top: 0;
     }
+
+/* Estilos para o modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 10; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    font-size: larger;
+    background-color: #fefefe; /* Cor de fundo do modal */
+    margin: 15% auto; /* Margem para centralizar o modal verticalmente */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Largura do modal */
+    max-width: 600px; /* Largura máxima do modal */
+    position: relative; /* Posição relativa para alinhar o botão de fechar */
+}
+
+/* Estilos para o botão de fechar */
+.close {
+    color: #aaaaaa; /* Cor do botão de fechar */
+    float: right; /* Alinhar o botão de fechar à direita */
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000; /* Mudar a cor do botão de fechar quando hover ou focado */
+    text-decoration: none;
+    cursor: pointer;
+}
 
 
 
