--- a/docs/css/solicitacao.css
+++ b/docs/css/solicitacao.css
@@ -8,22 +8,21 @@
 }
 
 .banner {
-
     width: 100vw;
     height: 100vh; 
     background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .content {
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, .4);
+    background-color: rgba(0, 0, 0, 0.4);
     overflow: hidden;
 }
 
@@ -31,7 +30,6 @@
     display: flex;
     justify-content: center;
     color: #000;
-
 }
 
 #content {
@@ -47,43 +45,40 @@ form {
     flex-direction: column;
     padding: 20px 50px; 
     display: flex;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
 }
-
-/* #form-continuar-solicitacao {
-    margin: 20px; 
-} */
 
 .info-formes-solicitacao label,
-#title-form {
+.title-form {
     color: #000;
+    font-weight: bold;
+    margin-top: 10px; /* Espaçamento entre rótulos e campos de entrada */
 }
 
-#title-form {
+.title-form {
     text-align: center;
     font-size: 25px;
-    font-weight: bold;
     padding-bottom: 20px;
-
 }
 
 .info-formes-solicitacao input {
     width: 100%; 
-    height: 50px;
+    height: 40px; /* Reduz a altura dos campos de entrada */
     border-radius: 5px;
     border: 1px solid #bbb;
     background-color: #f5f5f5;
     padding: 0 10px;
-    margin: 10px 0; 
+    margin: 5px 0; 
 }
 
 .button-container {
     display: flex;
     justify-content: space-between;
+    margin-top: 20px; /* Espaçamento entre os botões e o resto do formulário */
 }
 
 .button-voltar {
-    width: 30% !important;
-    flex-grow: 0 !important;
+    width: 45%; /* Ajusta a largura dos botões */
     margin-right: 10px;
 }
 
@@ -93,4 +88,5 @@ form {
     color: #fff;
     border-radius: 5px;
     flex-grow: 1;
+    cursor: pointer; /* Adiciona cursor de ponteiro nos botões */
 }
