--- a/docs/css/suporte.css
+++ b/docs/css/suporte.css
@@ -165,6 +165,11 @@ button:hover {
  
 }
 @media only screen and (max-width: 768px) {
+    .container-suporte {
+        display: flex;
+        justify-content: center;
+    }
+    
     .banner {
         background: none;
         background-size: cover;
