--- a/docs/css/user-login.css
+++ b/docs/css/user-login.css
@@ -20,6 +20,7 @@
 #content {
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, .4);
@@ -43,7 +44,6 @@
 .menu-login {
     width: 422px;
     height: 531px;
-    margin: 0 auto;
     background-color: #FFF;
     border-radius: 10px;
     padding: 20px 50px;
@@ -122,7 +122,6 @@
 }
 
 .corpo {
-    margin-top: 7vh;
     display: flex;
     align-items: center;
     justify-content: center;
