--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -87,6 +87,7 @@ header {
     background-color: var(--color-active);
     background-size: 0.5%;
     border-radius: 5px;
+    pointer-events: painted;
 }
 
 
